# val-sing-box-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  release.yml
scripts/: install.ps1  install.sh
src/: clash.rs  errors.rs  ip.rs  main.rs  ui.rs
src/app/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/doctor/: mod.rs
src/install/: manifest.rs  mod.rs
src/output/: format.rs  mod.rs
src/platform/: detect.rs  mod.rs  paths.rs
src/service/: launchd.rs  mod.rs  procd.rs  systemd.rs  windows_svc.rs
src/state/: mod.rs  schema.rs
src/subscription/: fetch.rs  mod.rs  normalize.rs  parse.rs  remark.rs
src/uninstall/: mod.rs
tests/: integration.rs
website/: docusaurus.config.js  package-lock.json  sidebars.js
website/docs/: commands.md  configuration.md  getting-started.md  installation.md  node-management.md  troubleshooting.md  update.md
website/i18n/zh-Hans/: code.json
website/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: commands.md  configuration.md  getting-started.md  installation.md  node-management.md  troubleshooting.md  update.md
website/i18n/zh-Hans/docusaurus-theme-classic/: footer.json  navbar.json
website/src/css/: custom.css
